# nodes_shared_code

./: README.md
.github/workflows/: peppyos-shared-tests.yml
bimanual_collision_model/: .gitignore  Cargo.toml  README.md
bimanual_collision_model/examples/: visualize.rs
bimanual_collision_model/src/: assemble.rs  clip.rs  error.rs  fit.rs  gjk.rs  hull.rs  lib.rs  model.rs  urdf_collision.rs
bimanual_collision_model/tests/: dual_arm.rs  fit_containment.rs
bimanual_collision_model/tests/fixtures/: openarm.rs
collision_model/: Cargo.toml  README.md
collision_model/src/: config.rs  fit.rs  geometry.rs  lib.rs  model.rs  pairs.rs  stl.rs  urdf_collision.rs
collision_model/tests/: config_containment.rs  dual_arm.rs  fit_containment.rs
collision_model/tests/fixtures/: openarm_v10_capsules.json
control_core/: Cargo.toml
control_core/src/: lib.rs  pacer.rs
openarm_can/: wrapper.cpp
openarm_can/src/: lib.rs
openarm_description/src/: lib.rs
openarm_model/: README.md
openarm_model/docs/: gen_diagrams.py
openarm_model/src/: description.rs  fk.rs  ik.rs  model.rs
openarm_model/tests/: psi_grid_resolution.rs
openarm_model/tools/: kdl_reference.cpp
openarm_model/urdf/: README.md
peppyos-shared/: .gitignore  Cargo.toml
peppyos-shared/build-helpers-internal/: Cargo.toml
peppyos-shared/build-helpers-internal/src/: cargo.rs
peppyos-shared/config-internal/: Cargo.toml
peppyos-shared/config-internal/examples/interfaces_example_1/arm_controller/: peppy.json5
peppyos-shared/config-internal/examples/interfaces_example_1/depth_camera/: peppy.json5
peppyos-shared/config-internal/examples/interfaces_example_1/joint_state_source/: peppy.json5
peppyos-shared/config-internal/src/: fingerprint.rs
peppyos-shared/config-internal/src/node/: validation.rs
peppyos-shared/config-internal/src/test_helpers/: templates.rs
peppyos-shared/config-internal/tests/: example_configurations.rs
peppyos-shared/config-test-support/: Cargo.toml
peppyos-shared/config-test-support-internal/src/: scratch.rs
peppyos-shared/core-node-api/: Cargo.toml  build.rs
peppyos-shared/core-node-api/schemas/: node.capnp
peppyos-shared/core-node-api/src/: capnp_generated.rs  lib.rs
peppyos-shared/core-node-api/src/encoding/node/: info.rs
peppyos-shared/peppy-config-model/: Cargo.toml
peppyos-shared/peppy-config-model/tests/: example_configurations.rs
peppyos-shared/peppy-messaging-interface/: Cargo.toml
peppyos-shared/peppy-messaging-interface/src/: types.rs  zenoh_config.rs
peppyos-shared/peppy-messaging-interface/src/adapters/: zenoh.rs
peppyos-shared/peppy-messaging-interface/src/wire/zenoh_format/: tests.rs
peppyos-shared/peppy-messaging-interface/src/zenohd/: router_config.rs
peppyos-shared/peppy-messaging-interface/tests/: zenoh.rs  zenoh_tls.rs
peppyos-shared/peppylib-py/: Cargo.toml  pixi.toml
peppyos-shared/peppylib-py/src/: messaging.rs
peppyos-shared/peppylib-py/tests/: test_runner.py
peppyos-shared/peppylib-rs/: Cargo.toml  build.rs
peppyos-shared/peppylib-rs/src/: error.rs
peppyos-shared/peppylib-rs/src/messaging/: tests.rs
peppyos-shared/peppylib-rs/tests/: runner.rs
peppyos-shared/peppylib-rs/tests/core_node/: common.rs
peppyos-shared/pmi-internal/: Cargo.toml
sim_bridge_core/src/: bridge.rs  lib.rs  services.rs  transport.rs
sim_bridge_core/src/pipeline/: publisher.rs  subscriber.rs
sim_ext_core/: pyproject.toml
sim_ext_core/mujoco/: __init__.py
sim_ext_core/sim_ext_core/: __init__.py  config.py  peppylib_io.py
sim_ext_core/sim_ext_core/bridges/: actuator_ctrl.py  sim_control.py
sim_ext_core/sim_ext_core/isaac/: actuator_ctrl.py
sim_ext_core/sim_ext_core/mujoco/: actuator_ctrl.py  sim_control.py
srs_model/src/: arm.rs  error.rs  fk.rs
