[package]
name = "collision_model"
version = "0.1.0"
edition = "2024"
description = "Runtime self-collision detection for a bimanual arm: URDF-fitted capsules, pairwise minimum distance, and a direction-aware proximity governor. Pure Rust, no hardware or messaging deps."
license = "Apache-2.0"

[dependencies]
srs_model = { path = "../srs_model" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urdf-rs = "0.9"

[dev-dependencies]
rand = "0.8"
