[package]
name = "config"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
clap = { version = "4", features = ["derive"] }
thiserror.workspace = true
serde.workspace = true
# `preserve_order` keeps `serde_json::Map` backed by `IndexMap` so that
# round-tripping a `NodeConfig` through `json5_pretty::to_string_pretty`
# preserves `MessageFormat` field order; the capnp wire layout is keyed
# off that order, so losing it breaks producer/consumer schema compat.
serde_json = { workspace = true, features = ["preserve_order"] }
serde_json5.workspace = true
serde_path_to_error = "0.1"
tracing.workspace = true
proc-macro2 = "1.0"
walkdir = "2.5"
askama.workspace = true
capnp.workspace = true
capnpc.workspace = true
sha2.workspace = true
tempfile.workspace = true
indexmap = { version = "2.2", features = ["serde"] }
git2 = { version = "0.21", optional = true }
dirs = "6"
# Compile-time string concatenation so the bundled peppy_config template splices
# in the buffer-size constants instead of duplicating the literals.
const_format = "0.2"

[build-dependencies]
build-helpers = { path = "../build-helpers-internal" }

[dev-dependencies]

[features]
default = []
test_helpers = ["git2"]
